Fix the sector background cutoff

--- a/client/stylesheets/components/_sector.sass
+++ b/client/stylesheets/components/_sector.sass
@@ -19,11 +19,11 @@
 
   &::before
     content: ''
-    height: 9999px
+    height: 1000%
     left: 0
     position: absolute
     top: 0
-    width: 9999px
+    width: 1000%
     z-index: -1
 
     +respond-to($g-m)
